# proyecto-de-software

./: .gitignore  README.md  Trabajo Integrador -Etapa 1.html  app.py  calculadora.py  main.py  probando.md  pyproject.toml
admin/: README.md  pyproject.toml
admin/src/core/: database.py  pagination.py  seeds.py
admin/src/core/board/: __init__.py  issue.py
admin/src/core/flags/: __init__.py  models.py  service.py
admin/src/core/permissions/: models.py  service.py
admin/src/core/security/: passwords.py
admin/src/core/sites/: history_service.py  images_service.py  models.py  reviews_service.py  service.py  tags_service.py  validators.py
admin/src/core/users/: __init__.py  models.py  service.py  validators.py
admin/src/web/: __init__.py  config.py  oauth.py  storage.py
admin/src/web/api/: auth_jwt.py  auth_oauth.py  auth_session.py  sites.py  sites_helpers.py
admin/src/web/controllers/: __init__.py  auth.py  featureflags.py  reviews.py  sites.py  sites_admin.py  sites_utils.py  tags_admin.py  users.py  validation.py
admin/src/web/controllers/sites/: images_helpers.py  sites_admin.py  sites_history.py  sites_images.py  sites_public.py  sites_reviews.py  sites_utils.py
admin/src/web/handlers/: error.py
admin/src/web/schemas/: sites.py
admin/src/web/security/: __init__.py  jwt_tokens.py
admin/src/web/templates/: about.html  error.html  gestionSitios.html  gestionUsuarios.html  home.html  layout.html  login.html  moderacionReseñas.html  perfilUsuario.html  validacionPropuestas.html
admin/src/web/templates/flags/: featureflags.html
admin/src/web/templates/reviews/: detail.html  index.html
admin/src/web/templates/sites/: deleted.html  form.html  history.html  images.html  index.html  public.html
admin/src/web/templates/tags/: form.html  index.html
admin/src/web/templates/users/: form.html  index.html  show.html
admin/static/: styles.css
admin/tests/: test_home.py
portal/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
portal/src/: App.vue  main.js  siteMedia.js
portal/src/assets/: main.css
portal/src/components/: FeaturedSection.vue  HeroBanner.vue  SiteCard.vue
portal/src/constants/: api.js
portal/src/router/: index.js
portal/src/stores/: auth.js  favorites.js  featureFlags.js  maintenance.js
portal/src/utils/: csrf.js
portal/src/views/: AboutView.vue  HomeView.vue  MapView.vue  NotFoundView.vue  ProfileView.vue  SiteCreateView.vue  SiteDetailView.vue  SiteListView.vue
portal/static/: portal_styles.css
