[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = [
    "Basaj Nicolas <nicobas2004@gmail.com>"
]
readme = "README.md"
packages = [{ include = "web", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = ">=3.1.2,<4.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
flask-sqlalchemy-lite = ">=0.1.0,<0.2.0"
bcrypt = ">=4.2.0,<5.0.0"
geoalchemy2 = ">=0.18.0,<0.19.0"
shapely = ">=2.1.2,<3.0.0"
flask-session = ">=0.8.0,<0.9.0"
minio = ">=7.2.18,<8.0.0"
marshmallow = ">=4.1.0,<5.0.0"
flask-cors = ">=6.0.1,<7.0.0"
authlib = ">=1.3.0,<2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"